Bug 220628 - kio_sftp (?) leaks file descriptors when an op fails
Summary: kio_sftp (?) leaks file descriptors when an op fails
Status: VERIFIED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: sftp (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Andreas Schneider
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-30 03:06 UTC by Manuel Amador (Rudd-O)
Modified: 2010-01-04 01:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Amador (Rudd-O) 2009-12-30 03:06:48 UTC
Version:            (using KDE 4.3.4)
OS:                Linux
Installed from:    Fedora RPMs

i copied a directory from an sftp source to a local dest.  at some point it failed with the zopectlsock.part file (no specific failure message was supplied to me) so I just autoskipped it.  the copy finished.  when I found out that I could not umount /media/device, I did a quick lsof:

kio_sftp  28355    rudd-o   11w      REG               8,17         0     249000 /media/4082022559/Plone/zinstance/var/instance/zopectlsock.part (deleted)

The copy had finished, but the file remained open.  I had to kill kio_sftp manually.

This is not cool.
Comment 1 Andreas Schneider 2009-12-30 14:19:17 UTC
Normally it takes some time till slaves get closed. However kio_sftp has been completely rewritten for KDE 4.4. I'm the maintainer of the new slave and as there is nobody who cares about the old one, this will be closed as WONTFIX. Wait for KDE 4.4 which should be released soon.
Comment 2 Manuel Amador (Rudd-O) 2009-12-31 05:11:08 UTC
This IS with kde 4.4.
Comment 3 Manuel Amador (Rudd-O) 2009-12-31 05:13:28 UTC
I am using 4.4beta.

Reopen this. I cannot seem to reopen it.
Comment 4 Andreas Schneider 2009-12-31 11:23:40 UTC
Your initial comment states you're using KDE 4.3.4. Can you enable debug messages and reproduce this?

http://techbase.kde.org/Development/Tutorials/Debugging/Debugging_IOSlaves
Comment 5 Andreas Schneider 2009-12-31 11:26:08 UTC
Ok, these are the wrong steps. Do the following:

'kdebugdialog --fullmode'
search for kio_sftp and redirect the debug output to a file
run 'kdeinit4'

Reproduce the error and post the log. The above tells you how you can attach gdb and check where it actually is hanging.
Comment 6 Andreas Schneider 2010-01-03 19:51:09 UTC
SVN commit 1069560 by anschneider:

Fixed a leaked sftp file descriptor.

BUG: 220628


 M  +7 -7      kio_sftp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1069560
Comment 7 Manuel Amador (Rudd-O) 2010-01-04 01:48:28 UTC
Fully awesome.