Fixed a leaked sftp file descriptor.

BUG: 220628

svn path=/trunk/KDE/kdebase/runtime/; revision=1069560